# SParamAnalyzer

./: .gitignore  CMakeLists.txt  IVna.h  Main.qml  README.md  debug_controller.cpp  debug_controller.h  debug_menu.cpp  debug_menu.h  main.cpp  s_param_measurement.cpp  s_param_measurement.h  tcp_vna.cpp  tcp_vna.h  vna.cpp  vna.h
debug/: debug_controller.h  debug_menu.h
qml/: Main.qml
